--- a/index.html
+++ b/index.html
@@ -53,10 +53,8 @@
 
         <div id="middle-text">
             <h2 class="orange-color">Our Recipies</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit incidunt minima dolor earum aliquam
-                ratione repellat, consequatur nobis accusamus temporibus querspiciatis odio quidem reprehenderit
-                possimus nemo
-                aspernatur?</p>
+            <p>Here you can find your favourite food.<br>Our chiefs are really concious about customer
+                satisfaction.<br>Your review helps us to grow more and continue our services.</p>
         </div>
         <div class="flexible-container">
             <div class="recipie-item">
