--- a/index.html
+++ b/index.html
@@ -79,9 +79,28 @@
             </div>
         </div>
     </section>
+    <section class="bottom-section">
+        <div class="flexible-container">
+            <div class="half-width">
+                <img id="icon-size" src="icons/icons8_youtube_play_button_64px.png" alt="">
+                <h2 class="orange-color">1.2M</h2>
+                <p>Subscribers</p>
+            </div>
+            <div class="half-width">
+                <img id="icon-size" src="icons/icons8_instagram_64px.png" alt="">
+                <h2 class="orange-color">3.4M</h2>
+                <p>Followers</p>
+            </div>
+            <div class="half-width">
+                <img id="icon-size" src="icons/icons8_facebook_64px.png" alt="">
+                <h2 class="orange-color">2.7M</h2>
+                <p>Views</p>
+            </div>
+        </div>
+    </section>
     <footer>
         <h3><span class="orange-color">FOOD</span> NETWORK</h3>
-        <h4>Eat healty to live healthy.The <span class="orange-color">FOOD</span> we choose make a difference</h4>
+        <h4>Eat healty to live healthy.The <span class="orange-color">FOOD</span> we choose make a difference.</h4>
         <p>Sitemap | Terms of Service | Privacy Policy</p>
         <p>Copyright © 2021 FoodNetwork.com</p>
     </footer>
